styles/scss/web3bio.scss
/* ... */
//- Web3.bio Header
.web3bio-header {
  left: 0;
  position: fixed;
  top: 1rem;
  width: 100%;

  .column {
    align-items: center;
    display: flex;
    justify-content: space-between;
  }
}

.web3bio-logo {
  align-items: center;
  background: $dark-color;
  border-radius: .8rem;
  box-shadow: 0 .2rem .4rem rgba(0, 0, 0, .1);
  color: $dark-color;
  cursor: pointer;
  display: flex;
  height: 3rem;
  padding: .4rem;
  position: relative;
  text-align: left;
  transition: all .3s ease;
  user-select: none;
  width: 3rem;
  z-index: 1;

  &:focus,
  &:hover {
    box-shadow: 0 .3rem .6rem rgba(0, 0, 0, .2);
    color: $dark-color;
    text-decoration: none;
  }

  h1 {
    font-size: .8rem;
    font-weight: 900;
    letter-spacing: -.05rem;
    line-height: .8rem;
    margin: 0;
  }
}

.web3bio-action {
  align-items: center;
  background: $light-color;
  border-radius: .8rem;
  box-shadow: 0 .2rem .4rem rgba(0, 0, 0, .1);
  color: $dark-color;
  cursor: pointer;
  display: flex;
  font-size: 1.8rem;
  height: 3rem;
  justify-content: center;
  padding: .5rem;
  position: relative;
  text-decoration: none;
  text-align: center;
  transition: all .3s ease;
  width: 3rem;

  .action-icon {
    transform: rotate(180deg) translateY(.2rem);
  }

  &:focus,
  &:hover {
    box-shadow: 0 .3rem .6rem rgba(0, 0, 0, .2);
    color: $dark-color;
    text-decoration: none;
  }
}

.web3bio-content {
  min-height: 50vh;

  .web3bio-content-title {
    font-size: 1.6rem;
    font-weight: 900;
    line-height: 2rem;

    @media screen and (max-width: $size-md) {
      font-size: 1.2rem;
    }
  }
}

//- Web3.bio Search
.web3bio-search {
  .search-form {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    transform: translateY(20vh);
    transition: all .25s ease-in-out;
  }

  .web3bio-logo {
    margin-bottom: .2rem;
  }

  .form-label {
    font-size: 2.2rem;
    font-weight: 900;
    letter-spacing: -.05rem;
    line-height: 1;
    margin-bottom: 1rem;

    @media screen and (max-width: $size-md) {
      font-size: 2rem;
    }

    span {
      font-weight: 400;
    }
  }

  .form-input-group {
    margin: .3rem 0;
    position: relative;

    .form-input {
      border: transparent;
      box-shadow: 0 .05rem .2rem rgba($dark-color, .1);
      padding-right: 2.4rem;

      &:focus {
        box-shadow: 0 .8rem 4rem rgba($dark-color, .25), 0 .05rem .2rem rgba($dark-color, .1);
      }
    }

    .form-button {
      height: 2rem;
      padding: 0;
      position: absolute;
      right: .2rem;
      top: .2rem;
      width: 2rem;
    }

    .search-list {
      animation: slide-down .35s ease 1;
      display: block;
      left: 0;
      overflow-y: auto;
      position: absolute;
      top: 2.5rem;
      background: #fff;
      border-radius: .25rem;
      width: 100%;
      z-index: 999;

      .search-list-item {
        padding: .5rem .8rem;
        display: flex;
        gap: 1rem;
        align-items: center;
        cursor: pointer;

        &:hover {
          background: rgba($dark-color, .05);
        }
      }

      .search-list-item-active {
        background: rgba($dark-color, .05);
      }
    }
  }

  &.focused {
    .search-form {
      transform: translateY(0);
    }

    .form-label {
      display: none;
    }
  }

  .loading-container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}
/* ... */

